log
Fri Apr 17 06:37:24 PM UTC 2026: 
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:75:5: error: expected expression before ‘return’
   75 |     return NULL;
      |     ^~~~~~
hashmap.c:73:10: error: unused variable ‘pos’ [-Werror=unused-variable]
   73 |     long pos=
      |          ^~~
hashmap.c:76:1: error: control reaches end of non-void function [-Werror=return-type]
   76 | }
      | ^
cc1: all warnings being treated as errors
f51a7f7
Fri Apr 17 06:37:46 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/60
8f42c63
Fri Apr 17 06:52:19 PM UTC 2026: 
 hashmap.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:76:21: error: assignment to ‘long int’ from ‘Pair *’ makes integer from pointer without a cast [-Wint-conversion]
   76 |         map->current=map->buckets[pos] ;
      |                     ^
hashmap.c:77:19: error: returning ‘long int’ from a function with return type ‘Pair *’ makes pointer from integer without a cast [-Wint-conversion]
   77 |         return map->current ;
      |                ~~~^~~~~~~~~
hashmap.c:82:25: error: assignment to ‘long int’ from ‘Pair *’ makes integer from pointer without a cast [-Wint-conversion]
   82 |             map->current=map->buckets[pos] ;
      |                         ^
hashmap.c:83:23: error: returning ‘long int’ from a function with return type ‘Pair *’ makes pointer from integer without a cast [-Wint-conversion]
   83 |             return map->current ;
      |                    ~~~^~~~~~~~~
f8f650b
Fri Apr 17 06:54:05 PM UTC 2026: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:76:21: error: assignment to ‘long int’ from ‘Pair **’ makes integer from pointer without a cast [-Wint-conversion]
   76 |         map->current=map->buckets ;
      |                     ^
hashmap.c:77:19: error: returning ‘long int’ from a function with return type ‘Pair *’ makes pointer from integer without a cast [-Wint-conversion]
   77 |         return map->current ;
      |                ~~~^~~~~~~~~
hashmap.c:82:25: error: assignment to ‘long int’ from ‘Pair **’ makes integer from pointer without a cast [-Wint-conversion]
   82 |             map->current=map->buckets ;
      |                         ^
hashmap.c:83:23: error: returning ‘long int’ from a function with return type ‘Pair *’ makes pointer from integer without a cast [-Wint-conversion]
   83 |             return map->current ;
      |                    ~~~^~~~~~~~~
c9debf3
Fri Apr 17 06:54:48 PM UTC 2026: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
bee2019
Fri Apr 17 06:55:58 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f87d332
Fri Apr 17 07:00:27 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:80:14: error: value computed is not used [-Werror=unused-value]
   80 |         pos++%map->capacity ;
      |         ~~~~~^~~~~~~~~~~~~~
cc1: all warnings being treated as errors
643b10b
Fri Apr 17 07:01:13 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2ee281a
Fri Apr 17 07:02:09 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|7
total_score: 0/60
1555de9
Fri Apr 17 07:02:58 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
33d9726
Fri Apr 17 07:03:57 PM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:79:12: error: passing argument 1 of ‘printf’ makes pointer from integer without a cast [-Wint-conversion]
   79 |     printf(pos) ;
      |            ^~~
      |            |
      |            long int
In file included from /nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/stdio.h:970,
                 from test.c:1:
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/bits/stdio2.h:116:32: note: expected ‘const char *’ but argument is of type ‘long int’
  116 | printf (const char *__restrict __fmt, ...)
      |         ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
hashmap.c:79:5: error: format not a string literal and no format arguments [-Werror=format-security]
   79 |     printf(pos) ;
      |     ^~~~~~
cc1: all warnings being treated as errors
f01e6bd
Fri Apr 17 07:04:47 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:79:12: error: invalid type argument of unary ‘*’ (have ‘long int’)
   79 |     printf(*pos) ;
      |            ^~~~
3b89e9e
Fri Apr 17 07:05:06 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:79:12: error: passing argument 1 of ‘printf’ from incompatible pointer type [-Wincompatible-pointer-types]
   79 |     printf(&pos) ;
      |            ^~~~
      |            |
      |            long int *
In file included from /nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/stdio.h:970,
                 from test.c:1:
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/bits/stdio2.h:116:32: note: expected ‘const char *’ but argument is of type ‘long int *’
  116 | printf (const char *__restrict __fmt, ...)
      |         ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
hashmap.c:79:12: error: format not a string literal and no format arguments [-Werror=format-security]
   79 |     printf(&pos) ;
      |            ^~~~
cc1: all warnings being treated as errors
96b7833
Fri Apr 17 07:06:19 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:79:12: error: passing argument 1 of ‘printf’ makes pointer from integer without a cast [-Wint-conversion]
   79 |     printf(pos) ;
      |            ^~~
      |            |
      |            long int
In file included from /nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/stdio.h:970,
                 from test.c:1:
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/bits/stdio2.h:116:32: note: expected ‘const char *’ but argument is of type ‘long int’
  116 | printf (const char *__restrict __fmt, ...)
      |         ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
hashmap.c:79:5: error: format not a string literal and no format arguments [-Werror=format-security]
   79 |     printf(pos) ;
      |     ^~~~~~
cc1: all warnings being treated as errors
02d2e01
Fri Apr 17 07:06:31 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0a8408a
Fri Apr 17 07:08:45 PM UTC 2026: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
690f674
Fri Apr 17 07:09:44 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
162d320
Fri Apr 17 07:11:25 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e79c205
